<resources>
    <string name="app_name">sqliteLogin</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">No Account Yet? Create one</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="text_member">Already a Member?Login</string>

    <string name="activity_name">AlarmReminder</string>
    <string name="no_cardetails">Click on the button below to begin creating your reminder!</string>
    <string name="title_activity_add_reminder">Add Reminder</string>
    <string name="title_activity_edit_reminder">Edit Reminder</string>
    <string name="title_activity_licenses">Licenses</string>

    <string name="add_reminder">Reminder</string>
    <string name="details">Details</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="repeat">Repeat</string>
    <string name="repeat_off">Off</string>
    <string name="repeat_no">Repetition Interval </string>
    <string name="repeat_type">Type of Repetitions</string>

    <string name="action_discard_reminder">Discard Reminder</string>
    <string name="action_save_reminder">Save Reminder</string>

    <string name="editor_activity_title_new_reminder">Add Reminder Details</string>
    <string name="editor_activity_title_edit_reminder">Edit Reminder</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>

    <string name="keep_editing">Keep Editing</string>
    <string name="delete_dialog_msg">Delete this Reminder?</string>

    <string name="delete">Delete</string>

    <string name="cancel">Cancel</string>
    <string name="editor_delete_reminder_successful">Reminder deleted</string>

    <string name="editor_delete_reminder_failed">Error with deleting reminder</string>

    <string name="editor_insert_reminder_successful">Reminder saved</string>

    <string name="editor_insert_reminder_failed">Error with saving reminder</string>

    <string name="editor_update_reminder_successful">Reminder updated</string>

    <string name="editor_update_reminder_failed">Error with updating reminder</string>

    <string name="reminder_title">AlarmReminder</string>

    <string name="title_activity_maps">Map</string>

    <string name="title_activity_name">ToDo</string>


</resources>

